# complex-viral-evolution

./: LICENSE  README.md  dynamic-mutations.cabal  flake.nix
app/: HPC.hs  Repro.hs
data/: README.md
src/: DynamicMutations.hs  Reproduction.hs  Simulation.hs
src/DynamicMutations/: Immunity.hs  ODEs.hs  Parameters.hs  SIR.hs  Types.hs  Variant.hs
src/DynamicMutations/Metrics/: Diversity.hs  Linearity.hs
src/DynamicMutations/Metrics/Entropy/: Allen.hs  Jansson.hs
src/DynamicMutations/Types/: PopulationGraph.hs  Tree.hs
src/Reproduction/: ODEs.hs  Parameters.hs  SIR.hs  Types.hs  Variant.hs
src/Simulation/: Many.hs  Metrics.hs  Output.hs  Random.hs
